# rust-trezor-crypto

./: .gitmodules  Cargo.toml  README.md
trezor-crypto/: Cargo.toml
trezor-crypto-sys/: Cargo.toml  Makefile  build.rs  wrapper.h
trezor-crypto-sys/src/: bindings.rs  lib.rs  tests.rs
trezor-crypto/src/: bip39.rs  curve.rs  ecdsa.rs  ecdsa_canonical.rs  ed25519.rs  hasher.rs  hd_node.rs  lib.rs  signature.rs
trezor-crypto/src/ecdsa/: canonical.rs  curve.rs  hd_node.rs  mod.rs
trezor-crypto/src/utils/: bit_iter.rs  mod.rs
