[package]
name = "trezor-crypto-sys"
version = "0.1.2"
authors = ["Julian Popescu <jpopesculian@gmail.com>"]
edition = "2018"
description = "Rust bindings for the trezor crypto libraries"
license = "MIT"
repository = "https://github.com/riddleandcode/rust-trezor-crypto"

[features]
default = []
update-bindings = ["generate-bindings"]
generate-bindings = ["bindgen"]

[build-dependencies]
bindgen = { version = "0.59.0", optional = true }
pkg-config = "0.3.19"
cc = "1.0.59"

[dev-dependencies]
hex = "0.4.3"
